tests/ui/repeat-expr/copy-check-deferred-before-fallback.stderr
error[E0282]: type annotations needed for `[NotCopy; _]`
  --> $DIR/copy-check-deferred-before-fallback.rs:37:9
   |
LL |     let c = [NotCopy; _];
   |         ^    ------- type must be known at this point
   |
help: consider giving `c` an explicit type, where the value of const parameter `N` is specified
   |
LL |     let c: [_; N] = [NotCopy; _];
   |          ++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0282`.
